--- a/.env
+++ b/.env
@@ -14,3 +14,5 @@ Sender_Email=kumarshivam22122000@gmail.com
 Recipient_Email=careeranalytics499@gmail.com
 App_Password="pdqh wshb qepk izuz"
 
+EMAIL_USER=kumarshivam22122000@gmail.com
+EMAIL_PASSWORD=pdqh wshb qepk izuz
