--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
+    "express-session": "^1.18.1",
     "mysql2": "^3.14.1",
     "node-cache": "^5.1.2",
     "node-cron": "^3.0.3",
