--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=sqlproject@1234
+DB_HOST=database-1.cxwiuo2sqnmx.eu-north-1.rds.amazonaws.com
+DB_USER=admin
+DB_PASSWORD=adminAnalytics684
 DB_NAME=aidf_tables
 DB_PORT=3306
 PORT=5588
